mise a jour du fichier readme concernat le details du project